# Bouncer

./: .gitignore  CMakeLists.txt
inc/: QuickGUI.h  olcPixelGameEngine.h  stb_image_write.h
inc/core/: Matrix.h  Raster.hpp  Tuple.hpp
inc/render/: Geometry.h  Light.h  Patterns.h  Ray.h
inc/render/RT/: RTIntersection.h  RTLighting.h  RTWorld.h  Ray.h
inc/render/Raster/: RClipping.h  RInterp.h  RLines.h  RModel.h  RScene.h  RTriangles.h
inc/render/Raster/shading/: RLight.h
inc/type/: Matrix.h  Raster.hpp  Tuple.hpp
inc/view/: Camera.h  World.h
src/math/: matrix.cpp
src/render/: Main.cpp
src/render/lighting/: shading.cpp
src/render/raycasting/: intersection.cpp  patterns.cpp
src/test/geometry/: TestNormal.cpp  TestPlane.cpp
src/test/render/: TestHit.cpp  TestIntersections.cpp  TestLight.cpp  TestLighting.cpp  TestMaterial.cpp  TestPatterns.cpp  TestRay.cpp  TestRefraction.cpp
src/test/type/: TestMatrix.cpp  TestRaster.cpp  TestTranslationRotationScale.cpp  TestTuple.cpp
src/test/view/: TestCamera.cpp  TestWorld.cpp
